# retrace

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: browser_sdk_capture.yml  bug_report.yml  config.yml  detector_false_positive.yml  detector_quality.yml  feature_request.yml  generated_test_failure.yml  generated_ui_test.yml
.github/workflows/: ci-cd.yml
docker/: Dockerfile  entrypoint.sh
docs/: ai-qa-suite-source-of-truth.md  demo-script.md  detector-reason-codes.md  full-service-architecture.md  github-actions.md  github-app.md  launch-announcement.md  open-source-product-plan.md  perf.md  premium-qa-architecture-plan.md  python-sdk.md  quickstart.md  roadmap-build-plan.md  roadmap.md  versioning.md  visual-execution-mode.md
docs/study-notes/: README.md  affected-tests.md  alert-fanout.md  github-actions-templates.md  openapi-diff.md  perceptual-diff.md  postgres-backend.md  pr-agent.md  sentry-javascript-breadcrumbs.md  sentry-python.md
scripts/: loadtest.py
src/retrace/: __main__.py  alert_dispatch.py  auto_fix.py  (+63 more)
tests/: test_alert_dispatch.py  test_api_har_import.py  test_api_tester.py  test_api_testing.py  test_artifacts.py  test_auto_fix_worktree.py  test_auto_repro_signals.py  test_backup.py  test_browser_harness.py  test_cli_demo.py  test_cli_doctor.py  test_cli_init.py  test_cli_run.py  test_cli_suggest_fixes.py  test_cli_tester.py  test_cli_version.py  test_clusterer.py  test_config.py  test_cost_cli.py  test_data_cli.py  test_demo_all.py  test_deploys.py  test_digest.py  test_enrichment.py  test_errors.py  test_evidence.py  test_explorer.py  test_failures.py  test_fix_prompt.py  test_flake_quarantine.py  test_github_actions_templates.py  test_github_app.py  test_incidents.py  test_ingest_rate_limits.py  test_ingester.py  test_issue_sinks.py  test_llm_analyst.py  test_llm_client.py  test_llm_pr_review.py  test_llm_pricing.py  (+51 more)
(+92 files in other folders)
