[project]
name = "retrace"
version = "0.1.0a1"
description = "Your real users are your QA team. Retrace finds the bugs they hit."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
retrace = "retrace.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
