[project]
name = "retrace"
version = "0.1.0a1"
description = "Your real users are your QA team. Retrace finds the bugs they hit."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "questionary>=2.0",
]

[project.scripts]
retrace = "retrace.cli:main"

[project.optional-dependencies]
browser = [
    "playwright>=1.45",
]
# P1.2 — perceptual visual diff (SSIM + annotated diff PNG). Optional
# because byte-equality is still the default; the perceptual path only
# kicks in when these are installed.
image = [
    "pillow>=10.0",
    "numpy>=1.26",
]
# P1.5 — Postgres backend chassis. The URL scheme is accepted today
# (raising a clean `NotImplementedError` from `PostgresBackend`); the
# per-table migration ships in follow-up PRs.
postgres = [
    "psycopg[binary]>=3.2",
]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "pillow>=10.0",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
